tests/ui/static_ref.stderr
error: lifetime may not live long enough
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | lifetime `'py` defined here
  | cast requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `output[_]` does not live long enough
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^-
  | |           |
  | |           `output[_]` dropped here while still borrowed
  | borrowed value does not live long enough
  | argument requires that `output[_]` is borrowed for `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `holder_0` does not live long enough
 --> tests/ui/static_ref.rs:5:15
  |
4 | #[pyfunction]
  | -------------
  | |           |
  | |           `holder_0` dropped here while still borrowed
  | binding `holder_0` declared here
5 | fn static_ref(list: &'static Bound<'_, PyList>) -> usize {
  |               ^^^^^^-
  |               |     |
  |               |     argument requires that `holder_0` is borrowed for `'static`
  |               borrowed value does not live long enough

error: lifetime may not live long enough
 --> tests/ui/static_ref.rs:9:1
  |
9 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | lifetime `'py` defined here
  | cast requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
